syllabus is ready!

--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -108,7 +108,13 @@
 \noindent \textbf{Phone:} (657) 278-4770 \\
 \noindent \textbf{Email:} dpadams@fullerton.edu \\
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
-\noindent \textbf{Office hours:} Tuesdays 9:30--10:30 a.m. and 7:00--8:00 p.m. on \href{https://discord.com/channels/1128747433636135113/1154048074172354600}{Discord Office Hours Channel}; schedule individual appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}
+\noindent \textbf{Office hours:} Tuesdays 9:30--10:30 a.m. and 7:00--8:00 p.m. on \href{https://discord.com/channels/1128747433636135113/1154048074172354600}{Discord Office Hours Channel}; schedule individual appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. \textit{Paper consultations strongly encouraged at each stage of the writing project.}
+
+\section*{Why This Course Matters}
+
+We live in an era where 80\% of Americans believe the two parties cannot even agree on basic facts, and where 65\% report feeling exhausted when thinking about politics. The Founders understood this danger---Madison warned in Federalist 10 about the "violence of faction," while the checks and balances Montesquieu inspired were meant to prevent any single group from dominating. Yet here we are: political moderates have reached a record low of 34\%, Congress is historically polarized, and Americans increasingly view the opposing party not just as wrong, but as enemies of the republic. Tocqueville marveled at Americans' ability to form associations and work together across differences---a civic muscle that seems to have atrophied. But understanding how policy actually gets made reveals something crucial: even in our fractured moment, the machinery of governance continues to turn. Problems still become laws, programs still get implemented, and sometimes---against all odds---real solutions emerge from the chaos.
+
+This course equips you with the analytical tools to see beyond the doom-scrolling and cable news shouting matches. You'll discover that polarization isn't destiny; it's a policy problem that can be understood through frameworks like path dependence and punctuated equilibrium. FDR faced a nation literally coming apart during the Depression, yet managed to fundamentally reshape the relationship between citizens and government through savvy use of policy windows and coalition building. The same processes he mastered---agenda setting, problem definition, policy entrepreneurship---still operate today, just waiting for those who understand them. Through your research project, you'll trace how real policies navigate this polarized landscape, learning to spot the moments when change becomes possible. You'll understand why some issues break through the gridlock while others languish, how policy entrepreneurs exploit crises to push long-dormant solutions, and why implementation often matters more than legislation. This isn't just academic theory; it's a toolkit for citizenship in troubled times. Whether you're headed for public service or simply want to be an informed participant in democracy, this course teaches you to read the hidden grammar of American politics---to see the republic not as hopelessly broken, but as a complex system that citizens who understand it can still influence.
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section*{Course Communication}
@@ -124,11 +130,13 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \noindent \textbf{\underline{For issues with Canvas}}: Canvas Support Hotline = (657) 278-8888, \href{https://canvashelp.fullerton.edu/}{search the CSUF Canvas Guides with AI Assistant}, or \href{https://titans.service-now.com/sp?id=sc_cat_item&sys_id=f88efe80ebea6a10fb7cfcffcad0cdc6&subject=Canvas}{report a problem.}
 
 \vspace{0.5em}
-\noindent \textbf{Alternative plan for submitting work:} If you cannot submit an assignment via Canvas, email it to me immediately at dpadams@fullerton.edu with documentation of the technical issue.
+\noindent \textbf{\underline{For issues with Kritik}}: Contact \href{mailto:support@kritik.io}{support@kritik.io} or use the help resources at \href{https://us.kritik.io/help}{us.kritik.io/help}. Document any Kritik issues immediately with screenshots and notify the instructor.
+
+\vspace{0.5em}
+\noindent \textbf{Alternative plan for submitting work:} If you cannot submit an assignment via Canvas or Kritik, email it to me immediately at dpadams@fullerton.edu with documentation of the technical issue.
 
 \vspace{0.5em}
 \noindent \textbf{Response time:} I will strive to respond to all student emails, Discord posts, and Canvas messages within 24 hours, except on weekends and holidays. If you have not received a response within 24 hours, please send a follow-up message. If still no response within 48 hours, please text or call (657) 278-4770.
-
 % ========== SECTION 4: COURSE INFORMATION ==========
 \section*{Course Information}
 \noindent \textbf{Prefix, number, title:} POSC 315, \textit{Introduction to Public Policy} \\
@@ -139,10 +147,10 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \item \textbf{Course requisite(s):} None
 \item \textbf{Catalog description:} Federal domestic policymaking. Structure, functions, and relationships among American national institutions, including executive, legislative and judicial branches, media, political parties, and pressure groups.
 \item \textbf{Additional description:} This course explores the processes and key players in creating public policy in the United States. We examine the various official and unofficial influences on the policy process and the limitations imposed by institutional and structural factors. Students will gain a deeper appreciation for the complexities surrounding agenda setting, policy making, implementation, and evaluation in the American political system.
-\item \textbf{Policy regarding the use of generative AI:} Students may use AI tools for brainstorming, generating ideas, checking grammar, and summarizing content. However, AI tools should not be used to produce final drafts of assignments or significant portions of text submitted as original work. If AI tools are used, their contributions must be appropriately cited and disclosed in a note stating how the tool was used. All writing and analysis must be your own. Submitting AI-generated text as your own work without attribution is considered plagiarism.
+\item \textbf{Workload expectation:} This course requires consistent engagement throughout the semester. The scaffolded paper project (60\% of grade) means you'll be working on some aspect of your policy analysis nearly every week. Plan accordingly and avoid procrastination, as each stage builds on previous work. Expect to spend 8--10 hours per week on course materials, assignments, and peer reviews.
 \item \textbf{Course materials and equipment:} ~
 \item \textbf{Required text(s):} Birkland, T. A. (2020). \emph{An Introduction to the Policy Process: Theories, Concepts, and Models of Public Policy Making} (5th ed.). Routledge. ISBN: 978-0367333286
-\item \textbf{Other course materials and equipment:} Reliable computer and internet connection, access to Canvas and Discord
+\item \textbf{Other course materials and equipment:} Reliable computer and internet connection, access to Canvas, Discord, and Kritik platforms
 \end{flatlist}
 
 \vspace{1em}
@@ -197,52 +205,66 @@ If you encounter any technical difficulties, contact the instructor immediately 
     row{1} = {font=\bfseries},
   }
   Assignment                          & Percentage \\
-  Module Quizzes                      & 25\% \\
+  Module Quizzes (weekly)             & 25\% \\
   Policy Process Analysis Paper       & 60\% \\
   \quad Topic Selection \& Proposal   & \quad 5\% \\
-  \quad Annotated Bibliography        & \quad 5\% \\
-  \quad Literature Review              & \quad 10\% \\
+  \quad Annotated Bibliography        & \quad 10\% \\
+  \quad Literature Review              & \quad 15\% \\
   \quad Draft Analysis                 & \quad 15\% \\
   \quad Final Paper                    & \quad 15\% \\
-  \quad Peer Reviews (via Kritik)     & \quad 10\% \\
   Discussion Participation             & 15\% \\
   Total                               & 100\% \\
   \end{tblr}
 \end{table}
 \end{center}
 
-\noindent \textbf{Module Quizzes (25\% of Final Grade):} Each module includes a quiz at the end of the video content to assess understanding of key concepts. Quizzes consist of multiple-choice questions and must be completed by Sunday at 11:59 p.m. of each week.
+\noindent \textbf{Module Quizzes (25\% of Final Grade):} Each module includes a quiz following the video content to assess understanding of key concepts. Quizzes consist of 10--15 multiple-choice questions and must be completed by Sunday at 11:59 p.m. of each week. Lowest quiz score dropped.
 
 \vspace{0.5em}
-\noindent \textbf{Policy Process Analysis Paper (60\% of Final Grade):} This scaffolded writing project analyzes a specific policy issue through the lens of policy process theories. The final paper (10--12 pages) applies theories to understand the selected policy issue's development, implementation, and/or impact. Peer reviews are conducted through Kritik at each stage.
+\noindent \textbf{Policy Process Analysis Paper (60\% of Final Grade):} This scaffolded writing project develops your ability to analyze a specific policy issue through the lens of policy process theories. Each stage builds on the previous work and includes peer review via Kritik (integrated into each assignment's grade):
+
+\begin{itemize}
+\item \textbf{Topic Selection \& Proposal (5\%):} 1--2 page proposal defining your policy issue and research question
+\item \textbf{Annotated Bibliography (10\%):} Compile and evaluate 8--10 scholarly sources with 150--200 word annotations
+\item \textbf{Literature Review (15\%):} 4--5 page synthesis of existing research, identifying gaps and theoretical connections
+\item \textbf{Draft Analysis (15\%):} 7--9 page application of a theoretical framework to analyze your policy issue
+\item \textbf{Final Paper (15\%):} Complete 10--12 page analysis incorporating all feedback received
+\end{itemize}
+
+\textit{Note: Each assignment grade includes both your submission quality and peer review participation via Kritik. Missing peer reviews will significantly impact that assignment's grade.}
 
 \vspace{0.5em}
-\noindent \textbf{Discussion Participation (15\% of Final Grade):} Weekly participation in Canvas discussions and Discord conversations demonstrates engagement with course material and peers.
+\noindent \textbf{Discussion Participation (15\% of Final Grade):} Weekly participation in Canvas discussions and Discord conversations demonstrates engagement with course material and peers. Quality matters more than quantity---thoughtful, substantive contributions that advance the conversation earn full credit.
 
 % Part c: Attendance and Participation
 \vspace{1em}
 \noindent \textbf{c. Attendance and Participation policy:}
-As an asynchronous online course, ``attendance'' means regular engagement with course materials, timely submission of assignments, and active participation in discussions. Students should log into Canvas at least 3--4 times per week and complete all module activities by the weekly deadlines.
+As an asynchronous online course, ``attendance'' means regular engagement with course materials, timely submission of assignments, and active participation in discussions and peer reviews. Students should log into Canvas at least 3--4 times per week and complete all module activities by the weekly deadlines. Consistent engagement is essential for success in the scaffolded paper project.
 
 % Part d: Examination dates
 \vspace{1em}
 \noindent \textbf{d. Examination dates:}
-No traditional exams in this course. Assessment occurs through weekly module quizzes and the scaffolded writing project.
+No traditional exams in this course. Assessment occurs through weekly module quizzes and the scaffolded writing project with integrated peer review.
 
 % Part e: Make-up and late submission policy
 \vspace{1em}
 \noindent \textbf{e. Make-up and late submission policy:}
-Late assignments will be penalized 5\% per day unless prior arrangements are made. Module quizzes cannot be made up due to their weekly release schedule. The final paper deadline is firm---no late submissions accepted without documented emergency.
+\begin{itemize}
+\item \textbf{Written assignments:} 5\% penalty per day for late submissions unless prior arrangements are made
+\item \textbf{Module quizzes:} Cannot be made up due to weekly release schedule (lowest score dropped to account for emergencies)
+\item \textbf{Kritik peer reviews:} Have firm deadlines and cannot be made up---missing peer reviews results in significant grade reduction for that assignment
+\item \textbf{Final paper:} No late submissions accepted without documented emergency
+\end{itemize}
 
 % Part f: Authentication of student work
 \vspace{1em}
 \noindent \textbf{f. Authentication of student work:}
-All written work will be checked for originality using Turnitin. Students may be asked to discuss their work via Zoom to verify authorship. Kritik peer reviews help establish familiarity with each student's writing style.
+All written work will be checked for originality using Turnitin (integrated with Canvas). Students may be asked to discuss their work via Zoom to verify authorship. The Kritik peer review process helps establish familiarity with each student's writing style throughout the semester.
 
 % Part g: Extra credit
 \vspace{1em}
 \noindent \textbf{g. Extra credit:}
-No extra credit offered. Focus your efforts on the assigned work.
+No extra credit offered. Focus your efforts on the assigned work, particularly the scaffolded paper project which comprises the majority of your grade.
 
 % Part h: Retention of student work
 \vspace{1em}
@@ -250,12 +272,81 @@ No extra credit offered. Focus your efforts on the assigned work.
 Keep copies of all submitted work. I may retain exemplary student work (anonymized) for future teaching purposes with student permission.
 
 % ========== SECTION 6: ACADEMIC INTEGRITY ==========
-\section*{Academic Integrity}
-Students must adhere to the highest standards of academic integrity. Any student found to have engaged in academic dishonesty will be subject to the sanctions described in the \href{https://www.fullerton.edu/senate/publications_policies_resolutions/ups/UPS%20300/UPS%20300.021.pdf}{Academic Dishonesty Policy} (UPS 300.021). 
+\section{Academic Integrity}
+Students are expected to adhere to the highest standards of academic integrity. Any student found to have engaged in academic dishonesty will be subject to the sanctions described in the \href{https://www.fullerton.edu/senate/publications_policies_resolutions/ups/UPS%20300/UPS%20300.021.pdf}{Academic Dishonesty Policy} (UPS 300.021). Academic dishonesty includes, but is not limited to, cheating, plagiarism, fabrication, facilitating academic dishonesty, and submitting previously graded work without prior authorization. Students are expected to be familiar with the university's policy on academic dishonesty and to adhere to this policy in all aspects of this course. Any student who has questions about the policy should ask the professor for clarification.
 
-Academic dishonesty includes but is not limited to: cheating, plagiarism, fabrication, facilitating academic dishonesty, and submitting previously graded work without prior authorization. All written work will be checked using plagiarism detection software. 
+\subsection*{Plagiarism}
+Plagiarism is a serious violation of academic integrity and will not be tolerated in this course. Plagiarism includes, but is not limited to, copying and pasting text from sources without proper citation, paraphrasing text from sources without proper citation, and submitting work that is not your own. Students are expected to properly cite all sources used in their work and to submit original work. Failure to do so may result in a failing grade for the assignment and further disciplinary action.
 
-First offense typically results in assignment failure; second offense may result in course failure. When in doubt about citation or collaboration policies, ask before submitting.
+\subsection*{Written Work}
+All written work must be submitted in a professional format, including proper grammar, spelling, and punctuation. Written work must also be properly cited using APA 7th edition format. Students are expected to follow the guidelines for written work provided by the professor and to seek clarification if they have questions about the requirements.
+
+\subsection*{Artificial Intelligence (AI) Policy}
+
+\subsubsection*{Definition of Generative AI}
+
+\noindent For this course, generative AI refers to systems capable of producing human-like text, images, data analysis, or other content. Examples include:
+
+\begin{itemize}
+    \item Large Language Models (e.g., GPT-4, GPT-5, Claude, Gemini, TitanGPT)
+    \item Text-to-image or multimodal generators (e.g., DALL-E, Midjourney)
+    \item AI writing assistants and summarizers
+    \item Automated coding, data, or content generators
+\end{itemize}
+
+\subsubsection*{AI Use Policy for the Policy Process Analysis Paper}
+
+AI is permitted and encouraged as a learning tool, under the following guidelines:
+
+\textbf{Allowed uses for the paper project:}
+\begin{itemize}
+    \item Brainstorming research questions and identifying potential sources
+    \item Getting feedback on draft sections before submission
+    \item Checking grammar, clarity, and APA formatting
+    \item Generating questions to deepen your analysis
+    \item Identifying potential gaps or weaknesses in your argument
+\end{itemize}
+
+\textbf{Prohibited uses:}
+\begin{itemize}
+    \item Having AI write any portion of your submitted work
+    \item Using AI to paraphrase or rewrite sections of your paper
+    \item Submitting AI-generated text as your own analysis
+    \item Using AI to synthesize sources or create your literature review
+\end{itemize}
+
+\textit{All analysis, synthesis, and argumentation must be your own original work.}
+
+\subsubsection*{Rationale for AI Policy}
+
+This policy is designed to ensure AI use strengthens---not substitutes---your academic work:
+
+\begin{enumerate}
+    \item Promotes critical engagement with public policy theory by using AI as a feedback partner
+    \item Enhances literature review and writing by highlighting missing connections or blind spots
+    \item Builds professional literacy with tools already common in public service organizations
+    \item Develops ethical judgment by practicing responsible use of emerging technologies
+    \item Prepares you for professional environments where AI tools are increasingly prevalent
+\end{enumerate}
+
+\subsubsection*{Ethics and Responsible Use}
+
+\noindent Students are expected to engage with AI responsibly:
+
+\begin{itemize}
+    \item \textbf{Authorship}: All substantive writing must be your own. AI may provide critique, but not draft or rewrite.
+    \item \textbf{Citation}: When AI meaningfully informs your work, cite it (e.g., ``ChatGPT (GPT-5), personal communication, [date]'').
+    \item \textbf{Bias Awareness}: AI outputs reflect biases. Evaluate them critically for fairness and accuracy.
+    \item \textbf{Sustainability}: Be mindful of AI's environmental footprint and use tools thoughtfully.
+\end{itemize}
+
+\subsubsection*{Repercussions for Misuse}
+
+\begin{itemize}
+    \item Misuse includes submitting AI-generated work as your own, failing to cite AI contributions, or relying on AI instead of demonstrating your own analysis.
+    \item Consequences may include revision requirements, grade penalties, or formal academic integrity proceedings.
+    \item Turnitin's AI detection tools will be used to identify potential misuse.
+\end{itemize}
 
 % ========== SECTION 7: TECHNICAL COMPETENCIES ==========
 \section*{Technical Competencies}
@@ -263,9 +354,11 @@ Students need:
 \begin{itemize}
 \item Proficiency with Canvas, including submitting assignments, participating in discussions, and accessing course materials
 \item Ability to use Discord for class discussions and office hours
-\item Experience with Kritik platform for peer review assignments (training provided)
-\item Skills in word processing, online research, and proper citation formatting
+\item Experience with Kritik platform for peer review assignments (training provided in Week 1)
+\item Skills in word processing, online research, and proper APA citation formatting
 \item Ability to stream video content for module lectures and documentaries
+\item Access to CSUF Writing Center for paper development support (optional but strongly recommended)
+\item Time management skills for multi-stage writing project with firm peer review deadlines
 \end{itemize}
 
 % ========== SECTION 8: STUDENT RESOURCES WEBSITE ==========
@@ -280,7 +373,7 @@ It is the student's responsibility to read and understand the required and impor
 \item Campus student support resources
 \item Academic integrity
 \item Emergency preparedness
-\item Library services
+\item Library services (including research consultations)
 \item Student IT services and competencies
 \item Software privacy and accessibility
 \item Accessibility statement
@@ -290,15 +383,36 @@ It is the student's responsibility to read and understand the required and impor
 \item Semester calendar
 \end{itemize}
 
-% ========== SECTION 9: CLASSROOM MANAGEMENT ==========
+% ========== SECTION 9: COURSE POLICIES ==========
 \section*{Course Policies}
-\noindent \textbf{Netiquette:} Maintain professional and respectful communication in all course interactions. Review CSUF's netiquette guidelines on the student resources website.
+
+\noindent \textbf{Netiquette:} Maintain professional and respectful communication in all course interactions. Review CSUF's netiquette guidelines on the student resources website. This applies to Canvas discussions, Discord conversations, and Kritik peer reviews.
 
 \vspace{0.5em}
-\noindent \textbf{Module Schedule:} New modules release each Monday at 12:01 a.m. All module activities (videos, readings, quizzes, discussions) are due by Sunday at 11:59 p.m.
+\noindent \textbf{Module Schedule:} New modules release each Monday at 12:01 a.m. All module activities (videos, readings, quizzes, discussions) are due by Sunday at 11:59 p.m. Stay current with modules to succeed in the scaffolded paper project.
 
 \vspace{0.5em}
-\noindent \textbf{Kritik Peer Reviews:} Peer review assignments use the Kritik platform. You'll evaluate peers' work and provide constructive feedback. Your peer review quality is graded. Training materials provided in Week 1.
+\noindent \textbf{Kritik Peer Review Process:} 
+\begin{itemize}
+\item Each paper stage requires reviewing 3 peer submissions via Kritik
+\item Reviews must include substantive feedback (minimum 150 words per review)
+\item Use provided rubrics to evaluate specific criteria
+\item Complete reviews within one week of submission deadline
+\item Your peer review quality affects your assignment grade
+\item Rate the helpfulness of feedback you receive to improve the process
+\end{itemize}
+
+\vspace{0.5em}
+\noindent \textbf{Writing Support:} The CSUF Writing Center offers free consultations for all stages of the writing process. Schedule appointments at \href{http://www.fullerton.edu/writingcenter/}{fullerton.edu/writingcenter}. I strongly encourage using this resource, especially for the literature review and analysis stages.
+
+\vspace{0.5em}
+\noindent \textbf{Academic Support:} If you're struggling with course content or the paper project, please reach out early. Options include:
+\begin{itemize}
+\item Office hours (Tuesday mornings and evenings on Discord)
+\item Indi`vidual appointments via \href{https://dadams.io/appointments}{dadams.io/appointments}
+\item Discord \#help channel for peer support
+\item Canvas discussion forums for content questions
+\end{itemize}
 
 % ========== SECTION 10: GE REQUIREMENTS ==========
 \section*{General Education Requirements}
@@ -306,7 +420,7 @@ It is the student's responsibility to read and understand the required and impor
 
 \vspace{0.5em}
 \noindent \textbf{How the GE writing requirement will be met and assessed:}
-The scaffolded Policy Process Analysis Paper and peer reviews meet the writing requirement of UPS 411.201. Writing assignments involve organization and expression of complex data and ideas with careful evaluation and feedback at each stage. Writing competence determines a significant portion of the final grade.
+The scaffolded Policy Process Analysis Paper with integrated peer reviews meets the writing requirement of UPS 411.201. Writing assignments involve organization and expression of complex data and ideas with careful evaluation and feedback at each stage. Writing competence determines 60\% of the final grade through the multi-stage paper project.
 
 \vspace{0.5em}
 \noindent \textbf{GE grading standard:}
@@ -328,7 +442,7 @@ Students completing courses in this subarea shall:
 \noindent \textbf{Week 1, 8/25--8/31}\\
 Topic(s): Introduction to the Policy Process\\
 Reading(s): Syllabus; Birkland Ch. 1; American Regime Values (Canvas)\\
-Assignment(s) Due: Introductions on Discord; Kritik platform setup\\
+Assignment(s) Due: Introductions on Discord; Kritik platform setup and training\\
 
 \noindent \textbf{Week 2, 9/1--9/7}\\
 Topic(s): Elements of the Policy-Making System; Policy Process Theories\\
@@ -343,12 +457,12 @@ Assignment(s) Due: Module quiz; Discussion post\\
 \noindent \textbf{Week 4, 9/15--9/21}\\
 Topic(s): Official Policy Actors\\
 Reading(s): Birkland Ch. 4\\
-Assignment(s) Due: Module quiz; \textbf{Topic Selection \& Proposal}\\
+Assignment(s) Due: Module quiz; \textbf{Topic Selection \& Proposal (submit to Kritik by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 5, 9/22--9/28}\\
 Topic(s): Unofficial Policy Actors I\\
 Reading(s): Birkland Ch. 5\\
-Assignment(s) Due: Module quiz; \textbf{Peer Review of Proposals (Kritik)}\\
+Assignment(s) Due: Module quiz; \textbf{Complete peer reviews of proposals on Kritik (by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 6, 9/29--10/5}\\
 Topic(s): Unofficial Policy Actors II; Social Movements\\
@@ -358,12 +472,12 @@ Assignment(s) Due: Module quiz; Discussion post\\
 \noindent \textbf{Week 7, 10/6--10/12}\\
 Topic(s): Documentary 1 \& Discussion\\
 Reading(s): Documentary viewing guide (Canvas)\\
-Assignment(s) Due: Documentary reflection; \textbf{Annotated Bibliography}\\
+Assignment(s) Due: Documentary reflection; \textbf{Annotated Bibliography (submit to Kritik by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 8, 10/13--10/19}\\
 Topic(s): Agenda Setting, Power, and Problem Definition\\
 Reading(s): Birkland Ch. 6\\
-Assignment(s) Due: Module quiz; \textbf{Peer Review of Bibliographies (Kritik)}\\
+Assignment(s) Due: Module quiz; \textbf{Complete peer reviews of bibliographies on Kritik (by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 9, 10/20--10/26}\\
 Topic(s): Policy Typologies and Frameworks\\
@@ -373,12 +487,12 @@ Assignment(s) Due: Module quiz; Discussion post\\
 \noindent \textbf{Week 10, 10/27--11/2}\\
 Topic(s): Policy Decision Making and Analysis\\
 Reading(s): Birkland Ch. 8; Analysis readings (Canvas)\\
-Assignment(s) Due: Module quiz; \textbf{Literature Review}\\
+Assignment(s) Due: Module quiz; \textbf{Literature Review (submit to Kritik by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 11, 11/3--11/9}\\
 Topic(s): Policy Design and Tools\\
 Reading(s): Birkland Ch. 9\\
-Assignment(s) Due: Module quiz; \textbf{Peer Review of Literature Reviews (Kritik)}\\
+Assignment(s) Due: Module quiz; \textbf{Complete peer reviews of literature reviews on Kritik (by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 12, 11/10--11/16}\\
 Topic(s): Policy Implementation\\
@@ -388,15 +502,15 @@ Assignment(s) Due: Module quiz; Discussion post\\
 \noindent \textbf{Week 13, 11/17--11/23}\\
 Topic(s): Policy Failure and Learning\\
 Reading(s): Birkland Ch. 10 (second half)\\
-Assignment(s) Due: Module quiz; \textbf{Draft Analysis Paper}\\
+Assignment(s) Due: Module quiz; \textbf{Draft Analysis Paper (submit to Kritik by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Thanksgiving Break, 11/24--11/30}\\
-No new content---use this time to work on peer reviews and final paper\\
+No new content---use this time to complete peer reviews and begin final paper revisions\\
 
 \noindent \textbf{Week 14, 12/1--12/7}\\
 Topic(s): Documentary 2 \& Discussion\\
 Reading(s): Documentary viewing guide (Canvas)\\
-Assignment(s) Due: Documentary reflection; \textbf{Peer Review of Draft Papers (Kritik)}\\
+Assignment(s) Due: Documentary reflection; \textbf{Complete peer reviews of draft papers on Kritik (by 11:59 PM Sunday)}\\
 
 \noindent \textbf{Week 15, 12/8--12/14}\\
 Topic(s): Policy Evaluation and Science\\
@@ -406,6 +520,6 @@ Assignment(s) Due: Module quiz; Final paper preparation\\
 \noindent \textbf{Week 16, 12/15--12/19}\\
 Topic(s): Course Wrap-up and Synthesis\\
 Reading(s): None\\
-Assignment(s) Due: \textbf{Final Policy Process Analysis Paper due Thursday 12/18 at 11:59 p.m.}
+Assignment(s) Due: \textbf{Final Policy Process Analysis Paper due Thursday 12/18 at 11:59 PM (submit to Canvas)}\\
 
 \end{document}
