--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -102,7 +102,7 @@
 \maketitle
 
 % ========== SECTION 1: FACULTY INFORMATION ==========
-\section*{Faculty Information}
+\section{Faculty Information}
 \noindent \textbf{Instructor:} David P. Adams, Ph.D. \\
 \noindent \textbf{Office:} Gordon Hall 516 \\
 \noindent \textbf{Phone:} (657) 278-4770 \\
@@ -110,20 +110,20 @@
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
 \noindent \textbf{Office hours:} Tuesdays 9:30--10:30 a.m. and 7:00--8:00 p.m. on \href{https://discord.com/channels/1128747433636135113/1154048074172354600}{Discord Office Hours Channel}; schedule individual appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. \textit{Paper consultations strongly encouraged at each stage of the writing project.}
 
-\section*{Why This Course Matters}
+\section{Why This Course Matters}
 
 We live in an era where 80\% of Americans believe the two parties cannot even agree on basic facts, and where 65\% report feeling exhausted when thinking about politics. The Founders understood this danger---Madison warned in Federalist 10 about the "violence of faction," while the checks and balances Montesquieu inspired were meant to prevent any single group from dominating. Yet here we are: political moderates have reached a record low of 34\%, Congress is historically polarized, and Americans increasingly view the opposing party not just as wrong, but as enemies of the republic. Tocqueville marveled at Americans' ability to form associations and work together across differences---a civic muscle that seems to have atrophied. But understanding how policy actually gets made reveals something crucial: even in our fractured moment, the machinery of governance continues to turn. Problems still become laws, programs still get implemented, and sometimes---against all odds---real solutions emerge from the chaos.
 
 This course equips you with the analytical tools to see beyond the doom-scrolling and cable news shouting matches. You'll discover that polarization isn't destiny; it's a policy problem that can be understood through frameworks like path dependence and punctuated equilibrium. FDR faced a nation literally coming apart during the Depression, yet managed to fundamentally reshape the relationship between citizens and government through savvy use of policy windows and coalition building. The same processes he mastered---agenda setting, problem definition, policy entrepreneurship---still operate today, just waiting for those who understand them. Through your research project, you'll trace how real policies navigate this polarized landscape, learning to spot the moments when change becomes possible. You'll understand why some issues break through the gridlock while others languish, how policy entrepreneurs exploit crises to push long-dormant solutions, and why implementation often matters more than legislation. This isn't just academic theory; it's a toolkit for citizenship in troubled times. Whether you're headed for public service or simply want to be an informed participant in democracy, this course teaches you to read the hidden grammar of American politics---to see the republic not as hopelessly broken, but as a complex system that citizens who understand it can still influence.
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
-\section*{Course Communication}
+\section{Course Communication}
 All course announcements and communications will be sent via \emph{Canvas} and university email. Students are responsible for regularly checking their \emph{Canvas} notifications and email at least once daily. Please ensure your \emph{Canvas} notifications are set to receive messages from the course.
 
 For questions and support, use the course Discord server for the fastest response. For private matters, email me at dpadams@fullerton.edu. I strive to respond within 24 hours on weekdays.
 
 % ========== SECTION 3: TECHNICAL PROBLEMS ==========
-\section*{Technical Problems}
+\section{Technical Problems}
 If you encounter any technical difficulties, contact the instructor immediately to document the problem. Then, contact: \href{http://www.fullerton.edu/it/students/helpdesk/index.php}{student IT help desk}, \href{mailto:StudentITHelpDesk@fullerton.edu}{email}, phone (657) 278-8888, walk-in \href{http://www.fullerton.edu/it/students/sgc/index.php}{student genius center}, online chat - log into \href{http://my.fullerton.edu}{portal}; click ``Online IT Help''; click ``Live Chat.''
 
 \vspace{0.5em}
@@ -138,7 +138,7 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \vspace{0.5em}
 \noindent \textbf{Response time:} I will strive to respond to all student emails, Discord posts, and Canvas messages within 24 hours, except on weekends and holidays. If you have not received a response within 24 hours, please send a follow-up message. If still no response within 48 hours, please text or call (657) 278-4770.
 % ========== SECTION 4: COURSE INFORMATION ==========
-\section*{Course Information}
+\section{Course Information}
 \noindent \textbf{Prefix, number, title:} POSC 315, \textit{Introduction to Public Policy} \\
 \noindent \textbf{Meeting times with modality:} Fully online (100\% online), asynchronous
 
@@ -165,7 +165,7 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \end{enumerate}
 
 % ========== SECTION 5: GRADING POLICIES AND STANDARDS ==========
-\section*{Grading Policies and Standards}
+\section{Grading Policies and Standards}
 
 % Part a: Grading Scale
 \noindent \textbf{a. Grading scale:}
@@ -349,7 +349,7 @@ This policy is designed to ensure AI use strengthens---not substitutes---your ac
 \end{itemize}
 
 % ========== SECTION 7: TECHNICAL COMPETENCIES ==========
-\section*{Technical Competencies}
+\section{Technical Competencies}
 Students need:
 \begin{itemize}
 \item Proficiency with Canvas, including submitting assignments, participating in discussions, and accessing course materials
@@ -362,7 +362,7 @@ Students need:
 \end{itemize}
 
 % ========== SECTION 8: STUDENT RESOURCES WEBSITE ==========
-\section*{Student Resources Website}
+\section{Student Resources Website}
 It is the student's responsibility to read and understand the required and important \href{https://fdc.fullerton.edu/teaching/student-info-syllabi.html}{student information for course syllabi}. Included is information about:
 
 \begin{itemize}
@@ -384,7 +384,7 @@ It is the student's responsibility to read and understand the required and impor
 \end{itemize}
 
 % ========== SECTION 9: COURSE POLICIES ==========
-\section*{Course Policies}
+\section{Course Policies}
 
 \noindent \textbf{Netiquette:} Maintain professional and respectful communication in all course interactions. Review CSUF's netiquette guidelines on the student resources website. This applies to Canvas discussions, Discord conversations, and Kritik peer reviews.
 
@@ -415,7 +415,7 @@ It is the student's responsibility to read and understand the required and impor
 \end{itemize}
 
 % ========== SECTION 10: GE REQUIREMENTS ==========
-\section*{General Education Requirements}
+\section{General Education Requirements}
 \noindent \textbf{GE requirement(s) that this course meets:} General Education Explorations in Social Sciences subarea D.5
 
 \vspace{0.5em}
@@ -437,7 +437,7 @@ Students completing courses in this subarea shall:
 \end{enumerate}
 
 % ========== SECTION 11: CALENDAR/SCHEDULE ==========
-\section*{Calendar of Topics / Schedule of Classes}
+\section{Calendar of Topics / Schedule of Classes}
 
 \noindent \textbf{Week 1, 8/25--8/31}\\
 Topic(s): Introduction to the Policy Process\\
