--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -111,11 +111,12 @@
 \noindent \textbf{Phone:} (657) 278-4770 \\
 \noindent \textbf{Email:} dpadams@fullerton.edu \\
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
-\noindent \textbf{Office hours:} Tuesdays 9:30--10:30 a.m. and 7:00--8:00 p.m. on \href{https://discord.com/channels/1128747433636135113/1154048074172354600}{Discord Office Hours Channel}; schedule individual appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. \textit{Paper consultations strongly encouraged at each stage of the writing project.}
+\noindent \textbf{Discord:} \href{https://discord.gg/yxCXU9yC}{discord.gg/yxCXU9yC} \\
+\noindent \textbf{Office hours:} Mondays 7:00--8:00 p.m. on \href{https://discord.gg/yxCXU9yC}{Discord Office Hours Channel}; Tuesdays at 10:00 - 11:00 a.m. in person; schedule individual in-person or Zoom appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. 
 
 \section{Why This Course Matters}
 
-We live in an era where 80\% of Americans believe the two parties cannot even agree on basic facts, and where 65\% report feeling exhausted when thinking about politics. The Founders understood this danger---Madison warned in Federalist 10 about the "violence of faction," while the checks and balances Montesquieu inspired were meant to prevent any single group from dominating. Yet here we are: political moderates have reached a record low of 34\%, Congress is historically polarized, and Americans increasingly view the opposing party not just as wrong, but as enemies of the republic. Tocqueville marveled at Americans' ability to form associations and work together across differences---a civic muscle that seems to have atrophied. But understanding how policy actually gets made reveals something crucial: even in our fractured moment, the machinery of governance continues to turn. Problems still become laws, programs still get implemented, and sometimes---against all odds---real solutions emerge from the chaos.
+We live in an era when deep divisions shape not just our politics but our perceptions of reality itself. Nearly two-thirds of Americans (65\%) say they ``always or often feel exhausted'' by politics (Pew Research Center 2023). Self-identified moderates, once the largest group, have dropped to a record low of just 34\% (Gallup 2024). Meanwhile, unfavorable views of the opposing party have more than doubled since the 1990s, reaching record highs of “very unfavorable” sentiment (Pew Research Center; Gallup). James Madison warned in Federalist 10 of the “violence of faction,” and Montesquieu's vision of checks and balances was meant to prevent any single group from dominating. Yet today, partisan animosity runs so deep that many Americans see political opponents not merely as wrong, but as a threat to the republic itself. Alexis de Tocqueville once marveled at Americans' capacity to build associations and bridge differences—a civic muscle that now appears strained. And yet, even amid this polarization, the machinery of governance continues to turn: problems still become laws, programs are implemented, and occasionally, genuine solutions emerge from the gridlock.
 
 This course equips you with the analytical tools to see beyond the doom-scrolling and cable news shouting matches. You'll discover that polarization isn't destiny; it's a policy problem that can be understood through frameworks like path dependence and punctuated equilibrium. FDR faced a nation literally coming apart during the Depression, yet managed to fundamentally reshape the relationship between citizens and government through savvy use of policy windows and coalition building. The same processes he mastered---agenda setting, problem definition, policy entrepreneurship---still operate today, just waiting for those who understand them. Through your research project, you'll trace how real policies navigate this polarized landscape, learning to spot the moments when change becomes possible. You'll understand why some issues break through the gridlock while others languish, how policy entrepreneurs exploit crises to push long-dormant solutions, and why implementation often matters more than legislation. This isn't just academic theory; it's a toolkit for citizenship in troubled times. Whether you're headed for public service or simply want to be an informed participant in democracy, this course teaches you to read the hidden grammar of American politics---to see the republic not as hopelessly broken, but as a complex system that citizens who understand it can still influence.
 
@@ -146,15 +147,21 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \noindent \textbf{Meeting times with modality:} Fully online (100\% online), asynchronous
 
 \vspace{0.5em}
-\begin{flatlist}
-\item \textbf{Course requisite(s):} None
-\item \textbf{Catalog description:} Federal domestic policymaking. Structure, functions, and relationships among American national institutions, including executive, legislative and judicial branches, media, political parties, and pressure groups.
-\item \textbf{Additional description:} This course explores the processes and key players in creating public policy in the United States. We examine the various official and unofficial influences on the policy process and the limitations imposed by institutional and structural factors. Students will gain a deeper appreciation for the complexities surrounding agenda setting, policy making, implementation, and evaluation in the American political system.
-\item \textbf{Workload expectation:} This course requires consistent engagement throughout the semester. The scaffolded paper project (60\% of grade) means you'll be working on some aspect of your policy analysis nearly every week. Plan accordingly and avoid procrastination, as each stage builds on previous work. Expect to spend 8--10 hours per week on course materials, assignments, and peer reviews.
-\item \textbf{Course materials and equipment:} ~
-\item \textbf{Required text(s):} Birkland, T. A. (2020). \emph{An Introduction to the Policy Process: Theories, Concepts, and Models of Public Policy Making} (5th ed.). Routledge. ISBN: 978-0367333286
-\item \textbf{Other course materials and equipment:} Reliable computer and internet connection, access to Canvas, Discord, and Kritik platforms
-\end{flatlist}
+\begin{itemize}
+  \item \textbf{Course requisite(s):} POSC 100, GE Area 4A 
+
+  \item \textbf{Catalog description:} Federal domestic policymaking. Structure, functions, and relationships among American national institutions, including executive, legislative and judicial branches, media, political parties, and pressure groups.
+
+  \item \textbf{Additional description:} This course explores the processes and key players in creating public policy in the United States. We examine the various official and unofficial influences on the policy process and the limitations imposed by institutional and structural factors. Students will gain a deeper appreciation for the complexities surrounding agenda setting, policy making, implementation, and evaluation in the American political system.
+
+  \item \textbf{Workload expectation:} This course requires consistent engagement throughout the semester. The scaffolded paper project (60\% of grade) means you'll be working on some aspect of your policy analysis nearly every week. Plan accordingly and avoid procrastination, as each stage builds on previous work. Expect to spend 8--10 hours per week on course materials, assignments, and peer reviews.
+
+  \item \textbf{Course materials and equipment:}
+  \begin{itemize}
+    \item \textbf{Required text(s):} Birkland, T. A. (2020). \emph{An Introduction to the Policy Process: Theories, Concepts, and Models of Public Policy Making} (5th ed.). Routledge. ISBN: 978-0367333286
+    \item \textbf{Other materials:} Reliable computer and internet connection, access to Canvas, Discord, and Kritik platforms
+  \end{itemize}
+\end{itemize}
 
 \vspace{1em}
 \noindent \textbf{Student Learning Outcomes:}
@@ -221,7 +228,7 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \end{table}
 \end{center}
 
-\noindent \textbf{Module Quizzes (25\% of Final Grade):} Each module includes a quiz following the video content to assess understanding of key concepts. Quizzes consist of 10--15 multiple-choice questions and must be completed by Sunday at 11:59 p.m. of each week. Lowest quiz score dropped.
+\noindent \textbf{Module Quizzes (25\% of Final Grade):} Each module includes a quiz following the video content to assess understanding of key concepts. Quizzes consist of 10--20 multiple-choice questions and must be completed by Sunday at 11:59 p.m. of each week. Lowest quiz score dropped.
 
 \vspace{0.5em}
 \noindent \textbf{Policy Process Analysis Paper (60\% of Final Grade):} This scaffolded writing project develops your ability to analyze a specific policy issue through the lens of policy process theories. Each stage builds on the previous work and includes peer review via Kritik (integrated into each assignment's grade):
@@ -412,14 +419,14 @@ It is the student's responsibility to read and understand the required and impor
 \noindent \textbf{Academic Support:} If you're struggling with course content or the paper project, please reach out early. Options include:
 \begin{itemize}
 \item Office hours (Tuesday mornings and evenings on Discord)
-\item Indi`vidual appointments via \href{https://dadams.io/appointments}{dadams.io/appointments}
-\item Discord \#help channel for peer support
+\item Individual appointments via \href{https://dadams.io/appointments}{dadams.io/appointments}
+\item Discord \#qustions or \#315-public-policy channel for peer support
 \item Canvas discussion forums for content questions
 \end{itemize}
 
 % ========== SECTION 10: GE REQUIREMENTS ==========
 \section{General Education Requirements}
-\noindent \textbf{GE requirement(s) that this course meets:} General Education Explorations in Social Sciences subarea D.5
+\noindent \textbf{GE requirement(s) that this course meets:} General Education Explorations in Social Sciences subarea 4U.
 
 \vspace{0.5em}
 \noindent \textbf{How the GE writing requirement will be met and assessed:}
@@ -445,7 +452,7 @@ Students completing courses in this subarea shall:
 \noindent \textbf{Week 1, 8/25--8/31}\\
 Topic(s): Introduction to the Policy Process\\
 Reading(s): Syllabus; Birkland Ch. 1; American Regime Values (Canvas)\\
-Assignment(s) Due: Introductions on Discord; Kritik platform setup and training\\
+Assignment(s) Due: Introductions on Discord; Kritik platform setup and initial assignment; Module quiz\
 
 \noindent \textbf{Week 2, 9/1--9/7}\\
 Topic(s): Elements of the Policy-Making System; Policy Process Theories\\
